# d2typ

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: releasing.md  tasks.md
docs/refactor/: README.md  architecture-rfc.md  backend-contract.md  cli-manifest-spec.md  migration-plan.md
scripts/: render_homebrew_formula.py
src/: args.rs  cliargs.rs  error.rs  lib.rs  main.rs  parser.rs  render.rs
src/backend/: latex.rs  mod.rs  request.rs  typst.rs
src/core/: document.rs  mod.rs  value.rs
src/input/: csv.rs  detect.rs  json.rs  mod.rs  source.rs  toml.rs  xlsx.rs  yaml.rs
src/manifest/: infer.rs  load.rs  mod.rs  model.rs
src/parser/: mod.rs  value.rs
src/parser/parsed_data/: mod.rs  ser.rs
tests/: cli.rs  latex_toolchain.rs  reference_fixtures.rs
tests/common/: mod.rs
