[package]
name = "d2typ"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.29.0"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["full"] }
indenter = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
toml = "0.9.2"
