[package]
name = "d2typ"
version = "0.1.3"
edition = "2024"
description = "A command-line tool for converting structured data to Typst format"
license = "AGPL-3.0-only"
authors = ["Acture <acturea@gmail.com>"]
keywords = ["typst", "cli", "data"]
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://github.com/acture/d2typ"
homepage = "https://github.com/acture/d2typ"
repository = "https://github.com/acture/d2typ"

[dependencies]
calamine = "0.29.0"
clap = { version = "4.5.41", features = ["derive", "usage", "color", "suggestions"] }
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["full"] }
indenter = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tabled = "0.20.0"
toml = "0.9.2"
log = "0.4.27"
