[package]
name = "docpack"
version = "0.2.0"
edition = "2024"
description = "Package structured data into document-ready snapshot modules"
license = "AGPL-3.0-only"
authors = ["Acture <acturea@gmail.com>"]
keywords = ["typst", "cli", "data"]
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://github.com/acture/docpack"
homepage = "https://github.com/acture/docpack"
repository = "https://github.com/acture/docpack"

[dependencies]
calamine = "0.29.0"
clap = { version = "4.5.41", features = ["derive", "usage", "color", "suggestions"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
toml = "0.9.2"

[dev-dependencies]
zip = "4.2.0"
